--- a/e3 procesamiento de texto y redes LSTM.ipynb
+++ b/e3 procesamiento de texto y redes LSTM.ipynb
@@ -466,7 +466,25 @@
     "outputId": "98a62c27-5b2b-44cc-c27c-5e3c2c5f369a"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def procesa_texto(texto,modelo):\n",
+    "    spacy_doc = modelo(texto)\n",
+    "    lista = [token.lemma_ for token in spacy_doc if (not token.is_stop) and token.is_alpha]\n",
+    "    separador = ' '\n",
+    "    return separador.join(lista)\n",
+    "\n",
+    "tqdm.pandas()\n",
+    "pro_df['pro_X'] = pro_df['X'].progress_apply(lambda x: procesa_texto(x,nlp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pro_df.to_csv('pro_df.csv',index=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -500,7 +518,9 @@
     "id": "MWGdXsbPD4ow"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "(pro_df['pro_X'].str.count(' ')+1).describe()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -522,7 +542,11 @@
     "id": "_88ZW5V4D-7c"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "final_df = pro_df.drop(['X'],axis=1)\n",
+    "final_df.drop_duplicates(inplace = True)\n",
+    "final_df.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -663,7 +687,13 @@
     "id": "KBiY5mcwEC1N"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "nb_pipe = Pipeline([('Conteo',CountVectorizer(max_features=20000)),('clasificador',MultinomialNB())])\n",
+    "nb_pipe.fit(X_full_train,y_full_train)\n",
+    "filename = 'modelos/nb_pipe.pk'\n",
+    "os.makedirs('modelos', exist_ok=True)\n",
+    "pk.dump(nb_pipe,open(filename,'wb'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -693,7 +723,29 @@
     "id": "opHsYtdSEH6J"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def evalua_sklearn(y_true,y_pred,nombre_clasificador):\n",
+    "    os.makedirs('resultados/'+nombre_clasificador, exist_ok=True)\n",
+    "    reporte = classification_report(y_true,y_pred,digits=4)\n",
+    "    print(reporte)\n",
+    "    file = open('resultados/'+nombre_clasificador+'/reporte_clasificacion.txt','w')\n",
+    "    file.write(reporte)\n",
+    "    file.close()\n",
+    "\n",
+    "    matriz = confusion_matrix(y_true,y_pred)\n",
+    "    sns.heatmap(matriz)\n",
+    "    plt.savefig('resultados/'+nombre_clasificador+'/mc.pdf')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = nb_pipe.predict(X_test)\n",
+    "evalua_sklearn(y_test,y_pred,'nb_pipe')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -788,7 +840,22 @@
     "id": "C-fRguPeELN-"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "svm_pipe = Pipeline([('Vector',TfidfVectorizer(max_features=20000)),('SVC',SVC(kernel='rbf'))])\n",
+    "svm_pipe.fit(X_full_train,y_full_train)\n",
+    "filename = 'modelos/svm_pipe.pk'\n",
+    "pk.dump(svm_pipe,open(filename,'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = svm_pipe.predict(X_test)\n",
+    "evalua_sklearn(y_test,y_pred,'svm_pipe')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -827,7 +894,35 @@
    "outputs": [],
    "source": [
     "# no olvide fijar la semilla \n",
-    "np.random.seed(seed_)"
+    "np.random.seed(seed_)\n",
+    "parameters = {'SVC__kernel':('linear', 'rbf'), 'SVC__C':(0.01, 0.1, 1, 10, 100)}\n",
+    "svm_grid = GridSearchCV(svm_pipe,param_grid=parameters,n_jobs=-1,verbose=1,cv=3)\n",
+    "grid_search_svm = svm_grid.fit(X_full_train,y_full_train)\n",
+    "\n",
+    "filename = 'modelos/svm_grid.pk'\n",
+    "pk.dump(grid_search_svm,open(filename,'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = grid_search_svm.predict(X_test)\n",
+    "evalua_sklearn(y_test,y_pred,'svm_grid')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_params = grid_search_svm.best_params_\n",
+    "file = open('resultados/svm_grid/mejores_parametros.txt','w')\n",
+    "file.write(str(best_params))\n",
+    "file.close()"
    ]
   },
   {
@@ -1117,7 +1212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   },
   "nbTranslate": {
    "displayLangs": [
