--- a/e3 procesamiento de texto y redes LSTM.ipynb
+++ b/e3 procesamiento de texto y redes LSTM.ipynb
@@ -388,9 +388,9 @@
         "id": "9mDw369JCEef",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 72
+          "height": 163
         },
-        "outputId": "8b217ed6-3ded-4ddb-be97-a008f1fcc8e6"
+        "outputId": "aeb18d5d-4303-4a02-af8c-07070aea9640"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -1353,11 +1353,11 @@
       "source": [
         "etiqueta_fd = Field(sequential=False, use_vocab=False, batch_first=True, dtype=torch.float)\n",
         "documento_fd = Field(include_lengths=True, batch_first=True)\n",
-        "fields =  [('pro_X',documento_fd),('y',etiqueta_fd)]\n",
+        "fields =  [('pro_X', documento_fd), ('y', etiqueta_fd)]\n",
         "\n",
         "root='/content/drive/My Drive/colab/Ejercicio3Datalab/conjuntos/'\n",
         "train_td, val_td, test_td=TabularDataset.splits(path=root,train='entrenamiento.csv', validation='validacion.csv',\n",
-        "                      test='prueba.csv', format= 'csv', fields=fields)"
+        "                      test='prueba.csv', format= 'csv', fields=fields, skip_header=True)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -1426,13 +1426,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "60df797e-a9c7-430c-c36f-5750aeb4a5ab"
+        "outputId": "0b0bac60-2043-4dff-c188-4667a40c36d8"
       },
       "source": [
         "glove=GloVe(name='6B',dim=300)\n",
         "documento_fd.build_vocab(train_td,vectors=glove,max_size=20000 )\n",
-        "\n",
-        "#documento_fd.vocab.load_vectors(glove)\n",
         "documento_fd.vocab.vectors.shape"
       ],
       "execution_count": null,
@@ -1483,6 +1481,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sDBQropWXrhs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "b02c8cc5-21ff-407c-ed70-6f12f6bff2fc"
+      },
+      "source": [
+        "seq = torch.tensor([[4,5,6], [1,2,0], [3,0,0]])\n",
+        "lens = [3, 2, 1]\n",
+        "packed = pack_padded_sequence(seq, lens, batch_first=True, enforce_sorted=True)\n",
+        "packed.batch_sizes\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -1510,11 +1529,63 @@
         "colab": {}
       },
       "source": [
+        "from torch.autograd import Variable\n",
         "class Clove6B300BiLSTM(nn.Module):\n",
-        "  def __init__(hidden_size,text_field):\n",
-        "    pass\n",
+        "  \n",
+        "  def __init__(self,hidden_size,text_field):\n",
+        "    super().__init__()\n",
+        "    self.hidden_size=hidden_size\n",
+        "    self.text_field=text_field\n",
+        "    self.vocab_size=20002\n",
+        "    self.emb_dim=300\n",
+        "    # Capa de Embedding\n",
+        "    self.Embeding  = nn.Embedding(self.vocab_size,self.emb_dim)\n",
+        "    # Capa LSTM bidireccional\n",
+        "    self.BiLSTM = nn.LSTM(self.emb_dim,\n",
+        "                          hidden_size,\n",
+        "                          bidirectional=True,\n",
+        "                          batch_first=True)\n",
+        "    # drop\n",
+        "    self.Drop = nn.Dropout(.5)\n",
+        "    # Fully connected\n",
+        "    self.Fc = nn.Linear(self.hidden_size*2,1)  # doble direccion\n",
+        "    self.act = nn.Sigmoid()\n",
+        "\n",
+        "  def init_hidden(self, batch_size):\n",
+        "      h, c = (Variable(torch.zeros(4, batch_size, self.lstm_units)),\n",
+        "                Variable(torch.zeros(4, batch_size, self.lstm_units)))\n",
+        "      return h, c\n",
+        "\n",
         "  def forward(text,text_len):\n",
-        "    pass"
+        "    emb = self.Embeding(text)\n",
+        "    packed_emb = pack_padded_sequence(emb, text_len,batch_first=True, enforce_sorted=True)\n",
+        "    bi_lstm, (h,c) =self.BiLSTM(packed_emb)\n",
+        "\n",
+        "    output_unpack, output_lens = pad_packed_sequence(bi_lstm, batch_first=True)\n",
+        "\n",
+        "    output = output_unpack[:,-1,:]\n",
+        "    drop =self.Drop(output)\n",
+        "    fully_connected = self.act(self.Fc(drop)) \n",
+        "\n",
+        "    return fully_connected"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ai7OjzsKGcLB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        },
+        "outputId": "212ccceb-6095-4a5e-802b-1f9a9626fa7d"
+      },
+      "source": [
+        "modelo = Clove6B300BiLSTM(128,documento_fd)\n",
+        "modelo.to(device)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1545,7 +1616,11 @@
         "colab": {}
       },
       "source": [
-        ""
+        "loss_func = torch.nn.BCELoss()\n",
+        "opt = optim.Adam(modelo.parameters())\n",
+        "\n",
+        "\n",
+        "  "
       ],
       "execution_count": null,
       "outputs": []
