--- a/e3_procesamiento_de_texto_y_redes_LSTM (2).ipynb
+++ b/e3_procesamiento_de_texto_y_redes_LSTM (2).ipynb
@@ -1380,6 +1380,37 @@
     "plt.ylabel('score loss function')\n",
     "f.savefig('resultados/Glove6B300BiLSTM/costo_historico.pdf')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iterator = iter_test\n",
+    "y_pred = [] \n",
+    "y_true = []\n",
+    "loss_func = torch.nn.BCELoss()\n",
+    "for batch in iterator:\n",
+    "    text, text_length = batch.pro_X\n",
+    "    pred_current = modelo(text.to(device), text_length.to(device))\n",
+    "    pred_current = torch.round(torch.reshape(pred_current, (-1,)))\n",
+    "    pred_current = pred_current.detach().cpu().numpy()\n",
+    "    y_pred.append(pred_current)\n",
+    "    y_true.append(batch.y.detach().cpu().numpy())\n",
+    "\n",
+    "y_true = np.concatenate(y_true)\n",
+    "y_pred = np.concatenate(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evalua_sklearn(y_true, y_pred, 'Glove6B300BiLSTM')"
+   ]
   }
  ],
  "metadata": {
