--- a/e3_procesamiento_de_texto_y_redes_LSTM (2).ipynb
+++ b/e3_procesamiento_de_texto_y_redes_LSTM (2).ipynb
@@ -14,7 +14,10 @@
     "**20/07/2020 - E3 S15**\n",
     "\n",
     "\n",
-    "**Integrantes del grupo**:  "
+    "**Integrantes del grupo**:  \n",
+    " + Pablo Araya\n",
+    " + Tomás Rojas\n",
+    " + Ignacio Fierro"
    ]
   },
   {
